# capstone

./: .gitignore  CMakeLists.txt  README.md  control_flow.cpp  dev_install.sh  exportvideo.sh  install.sh  jetson_dep.sh
jetsic/: .buildOpenCV.sh.swp  .gitignore  .jetson_setup.sh.swp  jetson_dep.sh  jetson_skynet_dependencies.sh  todo.txt
jetsic/ros/ws/src/: .rosinstall  .rosinstall.bak
jetsic/ros/ws/src/offboard_examp/build_isolated/: catkin_make_isolated.cache
jetsic/ros/ws/src/offboard_examp/devel_isolated/: _setup_util.py  setup.sh
mavlink/: README.md
pursuit/: README.md
recognition/: README.md
ros/src/mavros_publisher/: CMakeLists.txt  package.xml
ros/src/mavros_publisher/src/: mavros_publisher_node.cpp
ros/src/sd5/: CMakeLists.txt  package.xml
ros/src/sd5/launch/: sd5.launch
ros/src/sd5/src/: ros_node.cpp
ros/src/video_subscriber/: CMakeLists.txt  package.xml
ros/src/video_subscriber/src/: video_subscriber_node.cpp
tracking/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cascade.xml  cmake_install.cmake  detect  detect_test  detect_test.cpp  drone.h  drone_detect.cpp  drone_main.cpp  drone_track.cpp  sim_cascade.xml  todo.txt  track  track_test  track_test.cpp
tracking/training/: README.md  bg.txt  drone.txt
tracking/training/data/: cascade.xml  stage0.xml  stage1.xml  stage10.xml  stage11.xml  stage12.xml  stage13.xml  stage14.xml  stage15.xml  stage2.xml  stage3.xml  stage4.xml  stage5.xml  stage6.xml  stage7.xml  stage8.xml  stage9.xml
